--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false  # don't fail fast as sometimes failures are version specific
       matrix:
-        release: [ v1.18.3, v1.17.3, v1.16.4, v1.15.5 ]
+        release: [ v1.14.7, v1.13.7, v1.12.7 ]
     steps:
       - name: checkout
         uses: actions/checkout@v2
